# ember-inspect

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
examples/simple/: example.py
examples/test_time_sae_steering/: README.md  main.py  results.csv  sanity_check.py
examples/test_time_sae_steering/results/mmlu_0_shot/zero-shot-steering/llama31_8b_it/: 2025-01-12T10-05-21-08-00_mmlu-0-shot_egsp5zcb9EUB37eArEakKa.eval
examples/test_time_sae_steering/results/mmlu_0_shot/zero-shot-steering/llama33_70b_it/: controller.json
experiments/: README.md  analyse.py  logs.csv  main.py
experiments/logs/mmlu_0_shot/autosteered_llama31_8b/: 2025-01-12T04-50-59-08-00_mmlu-0-shot_3ndYWVa9rD2AosmCZdH8JA.eval  controller.json  logs.json
experiments/logs/mmlu_0_shot/autosteered_llama33_70b/: 2025-01-12T04-36-42-08-00_mmlu-0-shot_fyjPhRMWVTSz4mMQkaWwJt.eval  controller.json  logs.json  metadata.json
experiments/logs/mmlu_0_shot/default_llama31_8b/: 2025-01-12T04-50-27-08-00_mmlu-0-shot_623cJJAfWxLQiq6icoKVUd.eval  controller.json  logs.json  metadata.json
experiments/logs/mmlu_0_shot/default_llama33_70b/: 2025-01-12T04-36-12-08-00_mmlu-0-shot_8NEbsJMLjaL6WKpGyzQe5n.eval  controller.json  logs.json
experiments/results/mmlu_0_shot/zero-shot-steering/llama31_8b_it/: controller.json  logs.json  metadata.json
experiments/results/mmlu_0_shot/zero-shot-steering/llama33_70b_it/: 2025-01-12T10-14-16-08-00_mmlu-0-shot_J4cLX7jSps36nGVxcX9d2R.eval  2025-01-12T10-16-05-08-00_mmlu-0-shot_J4cLX7jSps36nGVxcX9d2R.eval  2025-01-12T10-27-07-08-00_mmlu-0-shot_J4cLX7jSps36nGVxcX9d2R.eval  controller.json  logs.json
experiments/results/mmlu_0_shot/zero-shot/llama31_8b_it/: 2025-01-12T09-54-53-08-00_mmlu-0-shot_mpi8VsPQ7L89jh8yimNTZB.eval  controller.json  logs.json
experiments/results/mmlu_0_shot/zero-shot/llama33_70b_it/: controller.json  logs.json
experiments/results/mmlu_5_shot/few-shot-prompting/llama31_8b_it/: 2025-01-12T10-13-43-08-00_mmlu-5-shot_XLAVnxVYRAEURJxisGoGM7.eval  controller.json
experiments/results/mmlu_5_shot/few-shot-prompting/llama33_70b_it/: 2025-01-12T10-27-36-08-00_mmlu-5-shot_PsikMVVcGXqn5HJYF5fGdo.eval
src/test_time_sae_steering/ember/: controller.py
(+7 files in other folders)
